--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic settings
 description:  This is personal blog.
-baseurl: "/"
+baseurl: ""
 url: "https://kaia-HSU.github.io" 
 twitter_username: LAV_K_V
 github_username:  kaia-HSU
