--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,11 +1,11 @@
 # Site Settings
 title: '蠢呆的全端之路'
 description: 'My personal Blog'
-url: 'https://lavkumarv.github.io'
+url: 'https://kaia-HSU.github.io'
 
 # Admin Settings
-admin_name: 'Lav Vishwakarma'
-admin_email: 'lav.kumar.dev@gmail.com'
+admin_name: '蠢呆的全端之路'
+admin_email: '@gmail.com'
 
 #####################################################################
 #About Page
