--- a/_data/global.yml
+++ b/_data/global.yml
@@ -5,7 +5,7 @@ url: 'https://kaia-HSU.github.io'
 
 # Admin Settings
 admin_name: '蠢呆的全端之路'
-admin_email: '@gmail.com'
+admin_email: 'kaiatjp6@gmail.com'
 
 #####################################################################
 #About Page
