--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ paginate_path: "/page:num/"
 comments:
   provider : disqus    # 啟動的留言板服務，這邊就用預設即可
   disqus:
-    short_name : jekyllbootstrap    # 將內容替換成剛剛在disqus上申請的site name
+    short_name : kaia-HSU    # 將內容替換成剛剛在disqus上申請的site name
   livefyre:
     site_id: 123
   intensedebate :
