--- a/_config.yml
+++ b/_config.yml
@@ -26,19 +26,7 @@ paginate: 5
 paginate_path: "/page:num/"
 
 # Enable comments
-comments:
-  provider : disqus    # 啟動的留言板服務，這邊就用預設即可
-  disqus:
-    short_name : kaia-HSU    # 將內容替換成剛剛在disqus上申請的site name
-  livefyre:
-    site_id: 123
-  intensedebate :
-    account: 123abc
-  facebook:
-    appid: 123
-    num_posts: 5
-    width: 580
-    colorscheme: light
+comments: true
 
 # Markdown settings
 kramdown:
