--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,7 +1,7 @@
 # Site Settings
 title: '蠢呆的全端之路'
 description: 'My personal Blog'
-url: 'https://kaia-HSU.github.io'
+url: 'https://kaiachun.github.io'
 
 # Admin Settings
 admin_name: '蠢呆的全端之路'
