--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Basic settings
 description:  This is personal blog.
 baseurl: ""
-url: "https://kaia-HSU.github.io" 
+url: "https://kaiachun.github.io" 
 twitter_username: LAV_K_V
-github_username:  kaia-HSU
+github_username:  kaiachun
 include: ['_pages']
 
 # Build settings
