--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,7 @@ paginate: 5
 paginate_path: "/page:num/"
 
 # Enable comments
-comments: 
-  enable: true
-  type: disqus
-  shortname: kaia-hsu
-  count: true
+comments: true
 
 # Markdown settings
 kramdown:
