change img size

--- a/_data/global.yml
+++ b/_data/global.yml
@@ -17,6 +17,6 @@ author_description: '
 author_image: '/images/info.png'
 
 # social proiles
-linkedin: 'https://www.linkedin.com/in/lav-vishwakarma/'
-github: 'https://github.com/lavkumarv'
+linkedin: ''
+github: 'https://github.com/kaiachun'
 #####################################################################
